   * Configure Amarok -> Metadata tab includes new buttons to add and
     reconfigure synchronization targets.
   * When ffmpeg is not available, the Transcode dialog is no longer skipped; info message
     is shown instead. Patch by Jai Luthra. (BR 317902)
   * Amarok now uses some C++11 features. The subset used is defined by the 
     compilers currently supported by KDE.

  BUGFIXES:
   * Allows CollectionBrowser filter to have length of almost 24 hours. (BR 291400)
   * Prevent creation of video stream when transcoding to Opus. Patch by Martin Brodbeck.
   * Fix crash when starting Amarok with an iPod mounted. (BR 329498)
   * Also fetch cover art from xiph-comments with METADATA_BLOCK_PICTURE tag.
     Patch by Martin Brodbeck <martin@brodbeck-online.de>. (BR 328451)
   * Fix crash on quit when Amarok is in the middle of fadeout. (BR 325723)
   * Prevent shared memory size errors for very large collections. (BR 327812)
   * Fix OpenGL related crash. (BR 327150)
   * Always show preview in Organize Files dialog, hide complicated options behind
     a button. (BR 327201)
   * Fix sound glitch with fade-out on pause and GStreamer. (BR 323729)
   * Fix a bug in Organize Collection functionality that could lead to assertion failures
     later on. (BR 322474)
   * Fix an assertion failure when a track in Local Collection is replaced by another
     already tracked one. (BR 323156)
   * Fix failure to start embedded MySQL (with version 5.1 and MariaDB). (BR 323802)
   * Fixed compilation with libc++ (used on OSX and FreeBSD). (BR 324075)
   * Fixed crashes with Intel drivers due to Analyzer applet. (BR 323635)
   * Fixed performance problem with large podcast feeds.
     Patch by Frank Meerkoetter <frank@meerkoetter.org>. (BR 283022)
   * Fixed issue with Amarok sometimes not finding its plugins after an upgrade.
   * Album Artist / Compilation / Disc Number tags are now read correctly
     from APE tags. Patch by Bruno Léon <bruno.leon@nividic.org>. (BR 323735)