@@ -23,6 +23,8 @@ VERSION 2.9-Beta 1
      compilers currently supported by KDE.
 
   BUGFIXES:
+   * Update Jamendo to use new website. Patch By Yash Ladia
+   <yashladia1@gmail.com>
    * Allows CollectionBrowser filter to have length of almost 24 hours. (BR 291400)
    * Prevent creation of video stream when transcoding to Opus. Patch by Martin Brodbeck.
    * Fix crash when starting Amarok with an iPod mounted. (BR 329498)
